[BEAM-4496] Fix #3 for branch fetch failure on job_PostCommit_Website_Publish

--- a/website/build.gradle
+++ b/website/build.gradle
@@ -126,7 +126,7 @@ task commitWebsite << {
   // get the latest commit on master
   def latestCommit = grgit.log(maxCommits: 1)[0].abbreviatedId
 
-  shell "git fetch ${gitboxUrl} asf-site"
+  shell "git fetch ${gitboxUrl}"
   git.checkout(branch: 'asf-site')
   shell "git reset --hard origin/asf-site"
 
