--- a/website/Rakefile
+++ b/website/Rakefile
@@ -19,7 +19,7 @@ task :test do
         /datatorrent.com/,
         /ai.google/, # https://issues.apache.org/jira/browse/INFRA-16527
         /globenewswire.com/, # https://issues.apache.org/jira/browse/BEAM-5518
-        /www.se-radio.net/ # Can fail with rate limit HTTP 508 error
+        /www.se-radio.net/ # BEAM-5611: Can fail with rate limit HTTP 508 error
     ],
     :parallel => { :in_processes => Etc.nprocessors },
     }).run
