First step in Vortex sink - refactor CreateTablea and add TableRow -> proto conversion

--- a/sdks/java/extensions/google-cloud-platform-core/build.gradle
+++ b/sdks/java/extensions/google-cloud-platform-core/build.gradle
@@ -17,6 +17,7 @@
  */
 
 import groovy.json.JsonOutput
+import org.apache.beam.gradle.GrpcVendoring_1_26_0
 
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(
