--- a/sdks/java/core/build.gradle
+++ b/sdks/java/core/build.gradle
@@ -62,14 +62,6 @@ processResources {
   ]
 }
 
-// Exclude tests that need a runner
-test {
-  systemProperty "beamUseDummyRunner", "true"
-  useJUnit {
-    excludeCategories "org.apache.beam.sdk.testing.NeedsRunner"
-  }
-}
-
 dependencies {
   antlr library.java.antlr
   // antlr is used to generate code from sdks/java/core/src/main/antlr/
@@ -107,4 +99,5 @@ dependencies {
   shadowTest library.java.avro_tests
   shadowTest library.java.zstd_jni
   testRuntimeOnly library.java.slf4j_jdk14
+  testRuntimeOnly project(path: ":runners:direct-java", configuration: "shadow")
 }
