--- a/sdks/java/extensions/sql/build.gradle
+++ b/sdks/java/extensions/sql/build.gradle
@@ -63,6 +63,8 @@ dependencies {
   fmppTask "org.freemarker:freemarker:2.3.28"
   fmppTemplates library.java.vendored_calcite_1_20_0
   compile project(path: ":sdks:java:core", configuration: "shadow")
+  compile project(":sdks:java:extensions:join-library")
+  permitUnusedDeclared project(":sdks:java:extensions:join-library") // BEAM-11761
   compile project(":sdks:java:extensions:sql:udf")
   compile project(path: ":runners:direct-java", configuration: "shadow")
   compile library.java.commons_codec
@@ -74,12 +76,11 @@ dependencies {
   compile "org.codehaus.janino:janino:3.0.11"
   compile "org.codehaus.janino:commons-compiler:3.0.11"
   compile library.java.jackson_core
+  compile library.java.mongo_java_driver
   compile library.java.vendored_guava_26_0_jre
-  compile "org.mongodb:mongo-java-driver:3.9.1"
   compile library.java.slf4j_api
   compile library.java.joda_time
   compile library.java.vendored_guava_26_0_jre
-  permitUnusedDeclared project(":sdks:java:core")
   provided project(":sdks:java:io:kafka")
   provided project(":sdks:java:io:google-cloud-platform")
   compile project(":sdks:java:io:mongodb")
