--- a/sdks/java/extensions/sql/expansion-service/build.gradle
+++ b/sdks/java/extensions/sql/expansion-service/build.gradle
@@ -33,9 +33,11 @@ ext.summary = """Contains code to run a SQL Expansion Service."""
 
 
 dependencies {
+  compile project(path: ":sdks:java:core", configuration: "shadow")
+  compile project(path: ":sdks:java:expansion-service")
+  permitUnusedDeclared project(path: ":sdks:java:expansion-service") // BEAM-11761
   compile project(path: ":sdks:java:extensions:sql")
   compile project(path: ":sdks:java:extensions:sql:zetasql")
-  compile project(path: ":sdks:java:core", configuration: "shadow")
   compile library.java.vendored_guava_26_0_jre
 }
 
