--- a/runners/google-cloud-dataflow-java/worker/legacy-worker/build.gradle
+++ b/runners/google-cloud-dataflow-java/worker/legacy-worker/build.gradle
@@ -206,6 +206,10 @@ dependencies {
     compile project(":sdks:java:fn-execution")
     compile project(path: ":runners:google-cloud-dataflow-java:worker:windmill", configuration: "shadow")
     shadow library.java.vendored_guava_26_0_jre
+
+    // Conscrypt shouldn't be included here because Conscrypt won't work when being shaded.
+    // (Context: https://github.com/apache/beam/pull/13846)
+    // Conscrypt will be added to runtime dependencies by GrpcVendoring so compileOnly works for now.
     compileOnly "org.conscrypt:conscrypt-openjdk:2.5.1:linux-x86_64"
     compile "org.eclipse.jetty:jetty-server:9.2.10.v20150310"
     compile "org.eclipse.jetty:jetty-servlet:9.2.10.v20150310"
