--- a/sdks/java/extensions/euphoria/build.gradle
+++ b/sdks/java/extensions/euphoria/build.gradle
@@ -27,10 +27,10 @@ description = "Apache Beam :: SDKs :: Java :: Extensions :: Euphoria Java 8 DSL"
 
 dependencies {
   compile project(path: ":sdks:java:core", configuration: "shadow")
-  implementation library.java.jackson_annotations
-  implementation library.java.joda_time
-  implementation library.java.slf4j_api
-  implementation library.java.vendored_guava_26_0_jre
+  compile library.java.jackson_annotations
+  compile library.java.joda_time
+  compile library.java.slf4j_api
+  compile library.java.vendored_guava_26_0_jre
   testCompile project(":sdks:java:extensions:kryo")
   testCompile library.java.slf4j_api
   testCompile library.java.hamcrest_core
