--- a/sdks/java/extensions/google-cloud-platform-core/build.gradle
+++ b/sdks/java/extensions/google-cloud-platform-core/build.gradle
@@ -52,9 +52,10 @@ dependencies {
   compile library.java.http_core
   compile library.java.http_client
   compile library.java.jackson_annotations
+  compile library.java.jackson_databind
+  permitUnusedDeclared library.java.jackson_databind // BEAM-11761
   compile library.java.joda_time
   compile library.java.slf4j_api
-  testImplementation library.java.jackson_databind
   provided library.java.hamcrest_core
   provided library.java.junit
   testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
