--- a/sdks/java/extensions/schemaio-expansion-service/build.gradle
+++ b/sdks/java/extensions/schemaio-expansion-service/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile project(path: ":model:pipeline", configuration: "shadow")
     compile project(path: ":sdks:java:core", configuration: "shadow")
     compile library.java.vendored_grpc_1_26_0
-    compile "org.apache.beam:beam-vendor-guava-26_0-jre:0.1"
+    compile library.java.vendored_guava_26_0_jre
     testCompile library.java.junit
     testCompile library.java.mockito_core
 }
