--- a/sdks/java/extensions/sql/udf-test-provider/build.gradle
+++ b/sdks/java/extensions/sql/udf-test-provider/build.gradle
@@ -20,7 +20,10 @@ plugins {
   id 'org.apache.beam.module'
 }
 
-applyJavaNature(automaticModuleName: 'org.apache.beam.sdk.extensions.sql.provider')
+applyJavaNature(
+    automaticModuleName: 'org.apache.beam.sdk.extensions.sql.provider',
+    publish: false,
+)
 
 description = "Apache Beam :: SDKs :: Java :: Extensions :: SQL :: UDF test provider"
 ext.summary = "Java UDFs for testing. This project must be built separately from its parent so the UDF provider is not included in the context classloader for tests."
