Move payload providers out into their own module. (#13963)
* Move payload providers out into their own module.

This prevents all dependents on sdks:java:extensions:sql from needing to add a thrift and protobuf dependency.

* fix package

* restructure to put thrift and protobuf suppliers with their relevant packages

* fix moved messages

* fix moved messages

* fix moved messages

* Fix generated regex

* Add thrift suppresssion

--- a/sdks/java/io/thrift/build.gradle
+++ b/sdks/java/io/thrift/build.gradle
@@ -23,6 +23,7 @@ plugins {
 applyJavaNature(
         automaticModuleName: 'org.apache.beam.sdk.io.thrift',
         generatedClassPatterns: [
+                /^org\.apache\.beam\.sdk\.io\.thrift\.payloads.*/,
                 /^org\.apache\.beam\.sdk\.io\.thrift\.TestThriftStruct/,
                 /^org\.apache\.beam\.sdk\.io\.thrift\.TestThriftInnerStruct/,
                 /^org\.apache\.beam\.sdk\.io\.thrift\.TestThriftEnum/,
