--- a/website/www/site/data/en/committer_traits.yaml
+++ b/website/www/site/data/en/committer_traits.yaml
@@ -10,12 +10,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- body: { text: To learn more see the ASF documentation., link: https://www.apache.org/foundation/policies/conduct.html }
+- body: { text: "Learn more.", link: /contribute/attributes#knows-upholds-and-reinforces-the-apache-software-foundation-code-of-conduct }
   bolded: Knows, upholds, and reinforces the Apache Software Foundation code of conduct.
   icon: icons/contributor/become a committer/messages-icon.svg
-- body: { text: To learn more see the ASF documentation., link: https://infra.apache.org/committers.html#committer-responsibilities }
+- body: { text: "Learn more.", link: /contribute/attributes#knows-upholds-and-reinforces-the-responsibilities-of-an-apache-software-foundation-committer }
   bolded: Knows, upholds, and reinforces the responsibilities of an Apache Software Foundation committer.
   icon: icons/contributor/become a committer/beam-logo-icon.svg
-- body: { text: To learn more see our best practices!, link: https://beam.apache.org/contribute/attributes/ }
+- body: { text: "Learn more.", link: /contribute/attributes/#knows-upholds-and-reinforces-the-beam-communitys-practices }
   bolded: Knows, upholds, and reinforces the Beam community’s practices.
   icon: icons/contributor/become a committer/diamond-icon.svg
