--- a/sdks/java/io/hadoop-file-system/build.gradle
+++ b/sdks/java/io/hadoop-file-system/build.gradle
@@ -74,6 +74,13 @@ hadoopVersions.each {kv ->
   }
 }
 
+// Hadoop dependencies require old version of Guava (BEAM-11626)
+configurations.all {
+  resolutionStrategy {
+    force 'com.google.guava:guava:25.1-jre'
+  }
+}
+
 task hadoopVersionsTest(group: "Verification") {
   description = "Runs Hadoop file system tests with different Hadoop versions"
   def taskNames = hadoopVersions.keySet().stream()
