--- a/sdks/java/extensions/sql/zetasql/build.gradle
+++ b/sdks/java/extensions/sql/zetasql/build.gradle
@@ -32,6 +32,7 @@ def zetasql_version = "2020.10.1"
 
 dependencies {
   compile enforcedPlatform(library.java.google_cloud_platform_libraries_bom)
+  permitUnusedDeclared enforcedPlatform(library.java.google_cloud_platform_libraries_bom)
   compile project(path: ":sdks:java:core", configuration: "shadow")
   compile project(":sdks:java:extensions:sql")
   compile project(":sdks:java:extensions:sql:udf")
@@ -45,9 +46,9 @@ dependencies {
   compile library.java.slf4j_api
   compile library.java.vendored_guava_26_0_jre
   compile library.java.proto_google_common_protos // Interfaces with ZetaSQL use this
-  permitUnusedDeclared "com.google.api.grpc:proto-google-common-protos:2.0.1" // BEAM-11761
+  permitUnusedDeclared library.java.proto_google_common_protos // BEAM-11761
   compile library.java.grpc_google_common_protos // Interfaces with ZetaSQL use this
-  permitUnusedDeclared "com.google.api.grpc:grpc-google-common-protos:2.0.1" // BEAM-11761
+  permitUnusedDeclared library.java.grpc_google_common_protos // BEAM-11761
   compile "com.google.zetasql:zetasql-client:$zetasql_version"
   compile "com.google.zetasql:zetasql-types:$zetasql_version"
   compile "com.google.zetasql:zetasql-jni-channel:$zetasql_version"
