[BEAM-10961] enable strict dependency checking for sdks/java/io/contextualtextio

--- a/sdks/java/io/contextualtextio/build.gradle
+++ b/sdks/java/io/contextualtextio/build.gradle
@@ -18,6 +18,7 @@
 
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(
+        enableStrictDependencies:true,
         automaticModuleName: 'org.apache.beam.sdk.io.contextualtextio',
 )
 
@@ -25,11 +26,14 @@ description = "Apache Beam :: SDKs :: Java :: Contextual-Text-IO"
 ext.summary = "Context-aware Text IO."
 
 dependencies {
-    compile library.java.vendored_guava_26_0_jre
-    compile library.java.protobuf_java
     compile project(path: ":sdks:java:core", configuration: "shadow")
-    testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
+    compile library.java.protobuf_java
+    permitUnusedDeclared library.java.protobuf_java
+    compile library.java.slf4j_api
+    compile library.java.vendored_guava_26_0_jre
+    compile library.java.vendored_grpc_1_26_0
 
+    testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
     testCompile library.java.guava_testlib
     testCompile library.java.junit
     testCompile library.java.hamcrest_core
