--- a/sdks/java/io/expansion-service/build.gradle
+++ b/sdks/java/io/expansion-service/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'application'
 mainClassName = "org.apache.beam.sdk.expansion.service.ExpansionService"
 
 applyJavaNature(
+  enableStrictDependencies:true,
   automaticModuleName: 'org.apache.beam.sdk.io.expansion.service',
   exportJavadoc: false,
   validateShadowJar: false,
@@ -32,10 +33,14 @@ ext.summary = "Expansion service serving several Java IOs"
 
 dependencies {
   compile project(":sdks:java:expansion-service")
+  permitUnusedDeclared project(":sdks:java:expansion-service")
   compile project(":sdks:java:io:kafka")
+  permitUnusedDeclared project(":sdks:java:io:kafka")
   compile project(":sdks:java:io:jdbc")
+  permitUnusedDeclared project(":sdks:java:io:jdbc")
   // Include postgres so it can be used with external JDBC
   compile library.java.postgres
+  permitUnusedDeclared library.java.postgres
   runtime library.java.kafka_clients
   runtime library.java.slf4j_jdk14
 }
