--- a/sdks/java/io/kinesis/expansion-service/build.gradle
+++ b/sdks/java/io/kinesis/expansion-service/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'application'
 mainClassName = "org.apache.beam.sdk.expansion.service.ExpansionService"
 
 applyJavaNature(
-
+    enableStrictDependencies:true,
     automaticModuleName: 'org.apache.beam.sdk.io.kinesis.expansion.service',
     exportJavadoc: false,
     validateShadowJar: false,
@@ -33,6 +33,8 @@ ext.summary = "Expansion service serving KinesisIO"
 
 dependencies {
   compile project(":sdks:java:expansion-service")
+  permitUnusedDeclared project(":sdks:java:expansion-service")
   compile project(":sdks:java:io:kinesis")
+  permitUnusedDeclared project(":sdks:java:io:kinesis")
   runtime library.java.slf4j_jdk14
 }
