--- a/sdks/java/io/azure/build.gradle
+++ b/sdks/java/io/azure/build.gradle
@@ -31,7 +31,7 @@ repositories { jcenter() }
 
 dependencies {
   compile library.java.commons_io
-  permitUnusedDeclared library.java.commons_io
+  permitUnusedDeclared library.java.commons_io // BEAM-11761
   compile library.java.slf4j_api
   compile library.java.vendored_guava_26_0_jre
   compile project(path: ":sdks:java:core", configuration: "shadow")
@@ -39,7 +39,7 @@ dependencies {
   compile "com.azure:azure-identity:1.0.8"
   compile "com.microsoft.azure:azure-storage:8.6.5"
   compile "com.azure:azure-core:1.6.0"
-  compile "com.azure:azure-storage-common:12.1.0"
+  compile "com.azure:azure-storage-common:12.8.0"
   compile library.java.jackson_annotations
   compile library.java.jackson_core
   compile library.java.jackson_databind
