--- a/sdks/java/io/bigquery-io-perf-tests/build.gradle
+++ b/sdks/java/io/bigquery-io-perf-tests/build.gradle
@@ -17,7 +17,7 @@
  */
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(enableStrictDependencies:true,exportJavadoc: false, publish: false)
+applyJavaNature(enableStrictDependencies: true, exportJavadoc: false, publish: false)
 provideIntegrationTestingDependencies()
 enableJavaPerformanceTesting()
 
@@ -25,7 +25,7 @@ description = "Apache Beam :: SDKs :: Java :: Google BigQuery IO Performance tes
 ext.summary = "Performance tests for Google BigQuery IO sources and sinks"
 
 dependencies {
-    testImplementation library.java.google_api_services_bigquery
+    testCompile library.java.google_api_services_bigquery
     testCompile project(path: ":sdks:java:core", configuration: "shadowTest")
     testCompile project(path: ":sdks:java:testing:test-utils", configuration: "testRuntime")
     testCompile project(path: ":sdks:java:extensions:google-cloud-platform-core", configuration: "testRuntime")
