--- a/sdks/java/io/contextualtextio/build.gradle
+++ b/sdks/java/io/contextualtextio/build.gradle
@@ -18,7 +18,7 @@
 
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(
-        enableStrictDependencies:true,
+        enableStrictDependencies: true,
         automaticModuleName: 'org.apache.beam.sdk.io.contextualtextio',
 )
 
@@ -28,7 +28,7 @@ ext.summary = "Context-aware Text IO."
 dependencies {
     compile project(path: ":sdks:java:core", configuration: "shadow")
     compile library.java.protobuf_java
-    permitUnusedDeclared library.java.protobuf_java
+    permitUnusedDeclared library.java.protobuf_java // BEAM-11761
     compile library.java.slf4j_api
     compile library.java.vendored_guava_26_0_jre
     compile library.java.vendored_grpc_1_26_0
