--- a/sdks/java/io/elasticsearch/build.gradle
+++ b/sdks/java/io/elasticsearch/build.gradle
@@ -17,7 +17,7 @@
  */
 
 plugins { id 'org.apache.beam.module' }
-applyJavaNature(enableStrictDependencies:true,automaticModuleName: 'org.apache.beam.sdk.io.elasticsearch')
+applyJavaNature(enableStrictDependencies: true, automaticModuleName: 'org.apache.beam.sdk.io.elasticsearch')
 
 description = "Apache Beam :: SDKs :: Java :: IO :: Elasticsearch"
 ext.summary = "IO to read and write on Elasticsearch"
@@ -26,7 +26,7 @@ dependencies {
   compile library.java.vendored_guava_26_0_jre
   compile project(path: ":sdks:java:core", configuration: "shadow")
   compile library.java.jackson_annotations
-  permitUnusedDeclared library.java.jackson_annotations
+  permitUnusedDeclared library.java.jackson_annotations // BEAM-11761
   compile library.java.jackson_core
   compile library.java.jackson_databind
   compile library.java.joda_time
