--- a/sdks/java/io/expansion-service/build.gradle
+++ b/sdks/java/io/expansion-service/build.gradle
@@ -33,14 +33,14 @@ ext.summary = "Expansion service serving several Java IOs"
 
 dependencies {
   compile project(":sdks:java:expansion-service")
-  permitUnusedDeclared project(":sdks:java:expansion-service")
+  permitUnusedDeclared project(":sdks:java:expansion-service") // BEAM-11761
   compile project(":sdks:java:io:kafka")
-  permitUnusedDeclared project(":sdks:java:io:kafka")
+  permitUnusedDeclared project(":sdks:java:io:kafka") // BEAM-11761
   compile project(":sdks:java:io:jdbc")
-  permitUnusedDeclared project(":sdks:java:io:jdbc")
+  permitUnusedDeclared project(":sdks:java:io:jdbc") // BEAM-11761
   // Include postgres so it can be used with external JDBC
   compile library.java.postgres
-  permitUnusedDeclared library.java.postgres
+  permitUnusedDeclared library.java.postgres // BEAM-11761
   runtime library.java.kafka_clients
   runtime library.java.slf4j_jdk14
 }
